tests/expected_invalid_parse_missing_match_arrow.diag.out
<input>:9:12: error: expected '=>' after match pattern
            On 1,
               ^
